开学前最后一次提交（大概）
1.本次提交完善了部分页面，创建了”社区“顶部导航栏对应的组件（一个）。
2.所有图片、文字皆为本地内容，无联网功能。
3.借鉴github现有项目ColorUi。

--- a/components/commutiy_plaza/commutiy_plaza.wxss
+++ b/components/commutiy_plaza/commutiy_plaza.wxss
@@ -1,7 +1,7 @@
+/* components/commutiy_plaza/commutiy_plaza.wxss */
 /* pages/commutiy/commutiy.wxss */
 .box {  
   margin: 20rpx 0; 
-  
 }
 
 .box view.cu-bar {
