--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -10,25 +10,25 @@
   </swiper-item>
 </swiper>
 
-<!-- 助眠 -->
+<!-- 导航栏 -->
 <!-- <text class="home_container">助眠</text> -->
 <view class="main-core" >
-  <navigator wx:for="{{swiperList}}" class="main-core-item" url="/pages/index/index">
-    <image class="core-item-icon" src="/images/logo.png"></image>
-    <text class="core-item-name">index</text>
+  <navigator wx:for="{{navigationList}}" class="main-core-item" url="{{item.page}}">
+    <image class="core-item-icon" src="{{item.image}}"></image>
+    <text class="core-item-name">{{item.text}}</text>
   </navigator>
-  <navigator class="btn" url="/pages/index/index">
+  <!-- <navigator class="btn" url="/pages/index/index">
     <text class="btn-yuan">音乐</text>
-  </navigator>
+  </navigator> -->
 </view>
 
-<view>
+<!-- <view>
   <text class="home_container">睡眠测试</text>
-</view>
+</view> -->
 
 <text class="home_container">知识科普</text>
 
-  <view class="cu-card article">
+  <view class="cu-card article" wx:for="{{2}}">
   <view class="cu-item shadow">
     <view class="title">
       <view class="text-cut">关于中医让你睡的更好的9个小技巧和10种方法11天彻底改善睡眠</view>
